[package]
name = "logline-agent"
version = "0.1.0"
edition = "2021"
description = "Lightweight log streaming agent for Logline"
authors = ["Zibo Chen <qw.54@163.com>"]
repository = "https://github.com/zibo-chen/logline-agent"

[[bin]]
name = "logline-agent"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching
notify = "6.1"

# Serialization (for protocol)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
